{
  "version": 4,
  "terraform_version": "1.1.8",
  "serial": 2906,
  "lineage": "6aa92ad5-cf88-df53-9fe3-690c564585c7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0283d8eaec5073c68",
            "association_id": "eipassoc-0580e30c6ac335d98",
            "domain": "vpc",
            "id": "eipalloc-0283d8eaec5073c68",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-015ea9a921b464d9a",
            "private_dns": "ip-172-19-2-47.eu-west-1.compute.internal",
            "private_ip": "172.19.2.47",
            "public_dns": "ec2-34-249-137-77.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.249.137.77",
            "public_ipv4_pool": "amazon",
            "tags": {
              "project": "6fire"
            },
            "tags_all": {
              "project": "6fire"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-076e25a2eab7211ba",
            "association_id": "eipassoc-093291391f582deed",
            "domain": "vpc",
            "id": "eipalloc-076e25a2eab7211ba",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-017c331edc3cfe8cb",
            "private_dns": "ip-172-19-3-113.eu-west-1.compute.internal",
            "private_ip": "172.19.3.113",
            "public_dns": "ec2-52-31-140-38.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.31.140.38",
            "public_ipv4_pool": "amazon",
            "tags": {
              "project": "6fire"
            },
            "tags_all": {
              "project": "6fire"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:339518963654:internet-gateway/igw-02e01486ecbf798ae",
            "id": "igw-02e01486ecbf798ae",
            "owner_id": "339518963654",
            "tags": {
              "project": "6fire"
            },
            "tags_all": {
              "project": "6fire"
            },
            "vpc_id": "vpc-099b1b7ca2251844f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:339518963654:loadbalancer/app/6fire-ecs-lb-api/dc0b9cafbc26b61c",
            "arn_suffix": "app/6fire-ecs-lb-api/dc0b9cafbc26b61c",
            "desync_mitigation_mode": "defensive",
            "dns_name": "6fire-ecs-lb-api-923464280.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:339518963654:loadbalancer/app/6fire-ecs-lb-api/dc0b9cafbc26b61c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "6fire-ecs-lb-api",
            "security_groups": [
              "sg-0e665fd0b378d80e8"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0223b575eccfd9ead"
              },
              {
                "subnet_id": "subnet-0cb5ea3650ad0330c"
              }
            ],
            "subnets": [
              "subnet-0223b575eccfd9ead",
              "subnet-0cb5ea3650ad0330c"
            ],
            "tags": {
              "project": "6fire"
            },
            "tags_all": {
              "project": "6fire"
            },
            "vpc_id": "vpc-099b1b7ca2251844f",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.lb_api",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "client",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:339518963654:loadbalancer/app/6fire-ecs-lb-client/52c38be61d3fa21a",
            "arn_suffix": "app/6fire-ecs-lb-client/52c38be61d3fa21a",
            "desync_mitigation_mode": "defensive",
            "dns_name": "6fire-ecs-lb-client-1347155636.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:339518963654:loadbalancer/app/6fire-ecs-lb-client/52c38be61d3fa21a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "6fire-ecs-lb-client",
            "security_groups": [
              "sg-0e665fd0b378d80e8"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0223b575eccfd9ead"
              },
              {
                "subnet_id": "subnet-0cb5ea3650ad0330c"
              }
            ],
            "subnets": [
              "subnet-0223b575eccfd9ead",
              "subnet-0cb5ea3650ad0330c"
            ],
            "tags": {
              "project": "6fire"
            },
            "tags_all": {
              "project": "6fire"
            },
            "vpc_id": "vpc-099b1b7ca2251844f",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.lb_api",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "dashboard",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:339518963654:loadbalancer/app/6fire-ecs-lb-dashboard/c14a1e4b19f3a715",
            "arn_suffix": "app/6fire-ecs-lb-dashboard/c14a1e4b19f3a715",
            "desync_mitigation_mode": "defensive",
            "dns_name": "6fire-ecs-lb-dashboard-1385017022.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:339518963654:loadbalancer/app/6fire-ecs-lb-dashboard/c14a1e4b19f3a715",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "6fire-ecs-lb-dashboard",
            "security_groups": [
              "sg-0e665fd0b378d80e8"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0223b575eccfd9ead"
              },
              {
                "subnet_id": "subnet-0cb5ea3650ad0330c"
              }
            ],
            "subnets": [
              "subnet-0223b575eccfd9ead",
              "subnet-0cb5ea3650ad0330c"
            ],
            "tags": {
              "project": "6fire"
            },
            "tags_all": {
              "project": "6fire"
            },
            "vpc_id": "vpc-099b1b7ca2251844f",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.lb_api",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:339518963654:listener/app/6fire-ecs-lb-api/dc0b9cafbc26b61c/7bfc5c31be7bfee4",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:339518963654:listener/app/6fire-ecs-lb-api/dc0b9cafbc26b61c/7bfc5c31be7bfee4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:339518963654:loadbalancer/app/6fire-ecs-lb-api/dc0b9cafbc26b61c",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "project": "6fire"
            },
            "tags_all": {
              "project": "6fire"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.api",
            "aws_security_group.lb_api",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "client",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:339518963654:listener/app/6fire-ecs-lb-client/52c38be61d3fa21a/3cee55c23e3dd578",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:339518963654:listener/app/6fire-ecs-lb-client/52c38be61d3fa21a/3cee55c23e3dd578",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:339518963654:loadbalancer/app/6fire-ecs-lb-client/52c38be61d3fa21a",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "project": "6fire"
            },
            "tags_all": {
              "project": "6fire"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.client",
            "aws_security_group.lb_api",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "dashboard",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:339518963654:listener/app/6fire-ecs-lb-dashboard/c14a1e4b19f3a715/40a9472ac6f19720",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:339518963654:listener/app/6fire-ecs-lb-dashboard/c14a1e4b19f3a715/40a9472ac6f19720",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:339518963654:loadbalancer/app/6fire-ecs-lb-dashboard/c14a1e4b19f3a715",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "project": "6fire"
            },
            "tags_all": {
              "project": "6fire"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.dashboard",
            "aws_security_group.lb_api",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ssl_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:339518963654:listener/app/6fire-ecs-lb-api/dc0b9cafbc26b61c/80ba99faad13c987",
            "certificate_arn": "arn:aws:acm:eu-west-1:339518963654:certificate/bc2cb328-05cc-495c-92da-3aea199003ec",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:339518963654:targetgroup/6fire-ecs-lb-tg-api/8f08fa64d5c473a8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:339518963654:listener/app/6fire-ecs-lb-api/dc0b9cafbc26b61c/80ba99faad13c987",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:339518963654:loadbalancer/app/6fire-ecs-lb-api/dc0b9cafbc26b61c",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {
              "project": "6fire"
            },
            "tags_all": {
              "project": "6fire"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.com",
            "aws_lb.api",
            "aws_lb_target_group.api",
            "aws_security_group.lb_api",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ssl_client",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:339518963654:listener/app/6fire-ecs-lb-client/52c38be61d3fa21a/9b2f8217e6fddce3",
            "certificate_arn": "arn:aws:acm:eu-west-1:339518963654:certificate/bc2cb328-05cc-495c-92da-3aea199003ec",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:339518963654:targetgroup/6fire-ecs-lb-tg-client/bffd2d8a88aae540",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:339518963654:listener/app/6fire-ecs-lb-client/52c38be61d3fa21a/9b2f8217e6fddce3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:339518963654:loadbalancer/app/6fire-ecs-lb-client/52c38be61d3fa21a",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {
              "project": "6fire"
            },
            "tags_all": {
              "project": "6fire"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.com",
            "aws_lb.client",
            "aws_lb_target_group.client",
            "aws_security_group.lb_api",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ssl_dashboard",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:339518963654:listener/app/6fire-ecs-lb-dashboard/c14a1e4b19f3a715/fdfeb22c9e662dc6",
            "certificate_arn": "arn:aws:acm:eu-west-1:339518963654:certificate/bc2cb328-05cc-495c-92da-3aea199003ec",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:339518963654:targetgroup/6fire-ecs-lb-tg-dashboard/a06d066db4067f1b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:339518963654:listener/app/6fire-ecs-lb-dashboard/c14a1e4b19f3a715/fdfeb22c9e662dc6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:339518963654:loadbalancer/app/6fire-ecs-lb-dashboard/c14a1e4b19f3a715",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {
              "project": "6fire"
            },
            "tags_all": {
              "project": "6fire"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.com",
            "aws_lb.dashboard",
            "aws_lb_target_group.dashboard",
            "aws_security_group.lb_api",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:339518963654:targetgroup/6fire-ecs-lb-tg-api/8f08fa64d5c473a8",
            "arn_suffix": "targetgroup/6fire-ecs-lb-tg-api/8f08fa64d5c473a8",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:339518963654:targetgroup/6fire-ecs-lb-tg-api/8f08fa64d5c473a8",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "6fire-ecs-lb-tg-api",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "project": "6fire"
            },
            "tags_all": {
              "project": "6fire"
            },
            "target_type": "ip",
            "vpc_id": "vpc-099b1b7ca2251844f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "client",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:339518963654:targetgroup/6fire-ecs-lb-tg-client/bffd2d8a88aae540",
            "arn_suffix": "targetgroup/6fire-ecs-lb-tg-client/bffd2d8a88aae540",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:339518963654:targetgroup/6fire-ecs-lb-tg-client/bffd2d8a88aae540",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "6fire-ecs-lb-tg-client",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "project": "6fire"
            },
            "tags_all": {
              "project": "6fire"
            },
            "target_type": "ip",
            "vpc_id": "vpc-099b1b7ca2251844f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "dashboard",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:339518963654:targetgroup/6fire-ecs-lb-tg-dashboard/a06d066db4067f1b",
            "arn_suffix": "targetgroup/6fire-ecs-lb-tg-dashboard/a06d066db4067f1b",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:339518963654:targetgroup/6fire-ecs-lb-tg-dashboard/a06d066db4067f1b",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "6fire-ecs-lb-tg-dashboard",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "project": "6fire"
            },
            "tags_all": {
              "project": "6fire"
            },
            "target_type": "ip",
            "vpc_id": "vpc-099b1b7ca2251844f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0283d8eaec5073c68",
            "connectivity_type": "public",
            "id": "nat-0dffd5976774a61de",
            "network_interface_id": "eni-015ea9a921b464d9a",
            "private_ip": "172.19.2.47",
            "public_ip": "34.249.137.77",
            "subnet_id": "subnet-0cb5ea3650ad0330c",
            "tags": {
              "project": "6fire"
            },
            "tags_all": {
              "project": "6fire"
            }
          },
          "dependencies": [
            "aws_eip.gw",
            "aws_internet_gateway.gw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-076e25a2eab7211ba",
            "connectivity_type": "public",
            "id": "nat-05e405b0fd6028a09",
            "network_interface_id": "eni-017c331edc3cfe8cb",
            "private_ip": "172.19.3.113",
            "public_ip": "52.31.140.38",
            "subnet_id": "subnet-0223b575eccfd9ead",
            "tags": {
              "project": "6fire"
            },
            "tags_all": {
              "project": "6fire"
            }
          },
          "dependencies": [
            "aws_eip.gw",
            "aws_internet_gateway.gw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02e01486ecbf798ae",
            "id": "r-rtb-04d6f595e3b3abca71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04d6f595e3b3abca7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:339518963654:route-table/rtb-0102fd7b97700f3d7",
            "id": "rtb-0102fd7b97700f3d7",
            "owner_id": "339518963654",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0dffd5976774a61de",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "project": "6fire"
            },
            "tags_all": {
              "project": "6fire"
            },
            "timeouts": null,
            "vpc_id": "vpc-099b1b7ca2251844f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.gw",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.gw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:339518963654:route-table/rtb-079806b6529813392",
            "id": "rtb-079806b6529813392",
            "owner_id": "339518963654",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05e405b0fd6028a09",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "project": "6fire"
            },
            "tags_all": {
              "project": "6fire"
            },
            "timeouts": null,
            "vpc_id": "vpc-099b1b7ca2251844f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.gw",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.gw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-007612a31ef7c2d37",
            "route_table_id": "rtb-0102fd7b97700f3d7",
            "subnet_id": "subnet-0f3ffc3b1f15eaa5c"
          },
          "dependencies": [
            "aws_eip.gw",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.gw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-058d88e69bcdc6324",
            "route_table_id": "rtb-079806b6529813392",
            "subnet_id": "subnet-099391ab0e629b339"
          },
          "dependencies": [
            "aws_eip.gw",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.gw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:339518963654:security-group/sg-01fcc28d9a86ad699",
            "description": "allow inbound access from the lb only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01fcc28d9a86ad699",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e665fd0b378d80e8"
                ],
                "self": false,
                "to_port": 3333
              }
            ],
            "name": "6fire-ecs-tasks",
            "name_prefix": "",
            "owner_id": "339518963654",
            "revoke_rules_on_delete": false,
            "tags": {
              "project": "6fire"
            },
            "tags_all": {
              "project": "6fire"
            },
            "timeouts": null,
            "vpc_id": "vpc-099b1b7ca2251844f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lb_api",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:339518963654:security-group/sg-0e665fd0b378d80e8",
            "description": "controls access to the lb",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e665fd0b378d80e8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3333
              }
            ],
            "name": "6fire-ecs-lb",
            "name_prefix": "",
            "owner_id": "339518963654",
            "revoke_rules_on_delete": false,
            "tags": {
              "project": "6fire"
            },
            "tags_all": {
              "project": "6fire"
            },
            "timeouts": null,
            "vpc_id": "vpc-099b1b7ca2251844f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:339518963654:security-group/sg-0ea4bd9a77d73f62e",
            "description": "6fire rds security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ea4bd9a77d73f62e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "terraform-20220427163105992600000002",
            "name_prefix": "terraform-",
            "owner_id": "339518963654",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-099b1b7ca2251844f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:339518963654:security-group/sg-03c7cc023b587c97d",
            "description": "Redis cache security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "id": "sg-03c7cc023b587c97d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "redis-cache",
            "name_prefix": "",
            "owner_id": "339518963654",
            "revoke_rules_on_delete": false,
            "tags": {
              "project": "6fire"
            },
            "tags_all": {
              "project": "6fire"
            },
            "timeouts": null,
            "vpc_id": "vpc-099b1b7ca2251844f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "storage",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:339518963654:security-group/sg-08bfca250e6ecbfc6",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-08bfca250e6ecbfc6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "6fire-storage",
            "name_prefix": "",
            "owner_id": "339518963654",
            "revoke_rules_on_delete": false,
            "tags": {
              "project": "6fire"
            },
            "tags_all": {
              "project": "6fire"
            },
            "timeouts": null,
            "vpc_id": "vpc-099b1b7ca2251844f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:339518963654:subnet/subnet-0f3ffc3b1f15eaa5c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "172.19.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f3ffc3b1f15eaa5c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339518963654",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "project": "6fire"
            },
            "tags_all": {
              "project": "6fire"
            },
            "vpc_id": "vpc-099b1b7ca2251844f"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:339518963654:subnet/subnet-099391ab0e629b339",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "172.19.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-099391ab0e629b339",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339518963654",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "project": "6fire"
            },
            "tags_all": {
              "project": "6fire"
            },
            "vpc_id": "vpc-099b1b7ca2251844f"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:339518963654:subnet/subnet-0cb5ea3650ad0330c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "172.19.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cb5ea3650ad0330c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339518963654",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "project": "6fire"
            },
            "tags_all": {
              "project": "6fire"
            },
            "vpc_id": "vpc-099b1b7ca2251844f"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:339518963654:subnet/subnet-0223b575eccfd9ead",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "172.19.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0223b575eccfd9ead",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339518963654",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "project": "6fire"
            },
            "tags_all": {
              "project": "6fire"
            },
            "vpc_id": "vpc-099b1b7ca2251844f"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "storage",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:339518963654:subnet/subnet-0d77133a8b7475116",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "172.19.12.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d77133a8b7475116",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339518963654",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "project": "6fire"
            },
            "tags_all": {
              "project": "6fire"
            },
            "vpc_id": "vpc-099b1b7ca2251844f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:339518963654:vpc/vpc-099b1b7ca2251844f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.19.0.0/16",
            "default_network_acl_id": "acl-004509f302f223712",
            "default_route_table_id": "rtb-04d6f595e3b3abca7",
            "default_security_group_id": "sg-0971983c86dec74db",
            "dhcp_options_id": "dopt-21603847",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-099b1b7ca2251844f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04d6f595e3b3abca7",
            "owner_id": "339518963654",
            "tags": {
              "project": "6fire"
            },
            "tags_all": {
              "project": "6fire"
            }
          }
        }
      ]
    }
  ]
}